<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.sale.pomocnikzarezije.MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_backup"
        android:orderInCategory="100"
        android:title="@string/backup_na_google_drive"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_restore"
        android:orderInCategory="100"
        android:title="@string/restore_google_drive"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_reset"
        android:orderInCategory="100"
        android:title="@string/reset_baze"
        app:showAsAction="never" />
    <item android:id="@+id/db"
        android:orderInCategory="100"
        android:title="DB"
        app:showAsAction="never" />
</menu>
