<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.sale.pomocnikzarezije.MainActivity">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1">
        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">
            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay" />
        </android.support.design.widget.AppBarLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/uslikaj_kod"
                    android:onClick="activatePDF417Scanner"
                    android:layout_weight=".5"/>
                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/spremi"
                    android:onClick="addEditRezije"
                    android:layout_weight=".5"/>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/obavezni_podaci"
                android:textSize="15dp"
                android:background="@color/colorPrimaryDark"
                android:textColor="@android:color/background_light"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="5dp">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".60"
                    android:text="@string/iznos"
                    android:textSize="15dp"
                    android:padding="5dp"/>
                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".30"
                    android:inputType="numberDecimal"
                    android:id="@+id/editTextIznos"
                    android:maxLength="7"
                    android:background="@android:color/transparent"
                    android:text="0.00"
                    />
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".10"
                    android:text="@string/hrk"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="5dp">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".60"
                    android:text="@string/datum_placanja"
                    android:textSize="15dp"
                    android:padding="5dp"/>
                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".40"
                    android:inputType="date"
                    android:id="@+id/editTextDatum"
                    android:maxLength="11"
                    android:background="@android:color/transparent"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="5dp">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".60"
                    android:text="@string/info_o_uplati"
                    android:textSize="15dp"
                    android:padding="5dp"/>
                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".40"
                    android:inputType="text"
                    android:id="@+id/editTextInfoPlacanje"
                    android:background="@android:color/transparent"/>
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/dodatni_podaci"
                android:background="@color/colorPrimaryDark"
                android:textColor="@android:color/background_light"
                android:clickable="true"/>
            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight=".50"
                            android:text="@string/platitelj"
                            android:textSize="15dp"
                            android:padding="5dp"/>
                        <EditText
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight=".50"
                            android:inputType="text"
                            android:id="@+id/editTextPLatitelj"
                            android:maxLength="100"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight=".50"
                            android:text="@string/adresa_platitelja"
                            android:textSize="15dp"
                            android:padding="5dp"/>
                        <EditText
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight=".50"
                            android:inputType="text"
                            android:id="@+id/editTextAdrPLatitelj"
                            android:maxLength="100"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight=".50"
                            android:text="@string/primatelj"
                            android:textSize="15dp"
                            android:padding="5dp"/>
                        <EditText
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight=".50"
                            android:inputType="text"
                            android:id="@+id/editTextPrimatelj"
                            android:maxLength="100"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight=".50"
                            android:text="@string/adresa_primatelja"
                            android:textSize="15dp"
                            android:padding="5dp"/>
                        <EditText
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight=".50"
                            android:inputType="text"
                            android:id="@+id/editTextAdrPrimatelj"
                            android:maxLength="100"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight=".50"
                            android:text="@string/iban_primatelja"
                            android:textSize="15dp"
                            android:padding="5dp"/>
                        <EditText
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight=".50"
                            android:inputType="text"
                            android:id="@+id/editTextIbanPrimatelj"
                            android:maxLength="100"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight=".50"
                            android:text="@string/model"
                            android:textSize="15dp"
                            android:padding="5dp"/>
                        <EditText
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight=".50"
                            android:inputType="text"
                            android:id="@+id/editTextModel"
                            android:maxLength="10"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight=".50"
                            android:text="@string/pnbp"
                            android:textSize="15dp"
                            android:padding="5dp"/>
                        <EditText
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight=".50"
                            android:inputType="text"
                            android:id="@+id/editTextPnbp"
                            android:maxLength="30"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight=".50"
                            android:text="@string/sifra_namjene"
                            android:textSize="15dp"
                            android:padding="5dp"/>
                        <EditText
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight=".50"
                            android:inputType="text"
                            android:id="@+id/editTextSifraNamjene"
                            android:maxLength="20"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight=".50"
                            android:text="@string/opis_placanja"
                            android:textSize="15dp"
                            android:padding="5dp"/>
                        <EditText
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight=".50"
                            android:inputType="text"
                            android:id="@+id/editTextOpisPl"
                            android:maxLength="100"/>
                    </LinearLayout>
                </LinearLayout>
            </ScrollView>
        </LinearLayout>

</android.support.design.widget.CoordinatorLayout>